tests/fail/wrong_arg.py
def foo(a: int):
    b = 2
    assert b == 2


b = 5
foo("Teste")
assert b == 5
